mapper resolves subdomain as setIdentifier